@startuml

title US003

/'As an Administrator, I want to have a list of existing rooms,
so that I can choose one to edit it.'/

class House {
  + getRooms : List<Room>
}

class GetRoomListController {
    - house : House
    - roomMapper : RoomMapper
    + GetRoomListController(...)
    + getRooms() : List<RoomDTO>
}

class RoomMapper {
    + RoomMapper(...)
    + roomsToDTO(...) : List<RoomDTO>
    + roomToDTO(...) : RoomDTO
}

class RoomDTO {
- name : String
- floor : int
- width : double
- length : double
- height : double

+ RoomDTO(...)
+ getName() : String
+ getFloor() : int
+ getWidth() : double
+ getLength() : double
+ getHeight() : double
}

class Room {
- name : String
- floor : int
+ getRoomName() : String
+ getFloor() : int
+ getDimensions() : Dimensions
}

class Dimensions {
- width : double
- length : double
- height : double

+ getWidth() : double
+ getLength() : double
+ getHeight() : double
}

GetRoomListController "1" ..> "1" House : uses
GetRoomListController "1" ..> "1   " RoomMapper : uses
RoomMapper "1" ..> "List<RoomDTO>" RoomDTO : creates
House "1" *-- "List<Room>" Room : contains
Room "1" *-- "1" Dimensions : has

@enduml